<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyers.MainActivity">


    <ImageView
        android:id="@+id/main_app_logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@drawable/pat_name" />

    <TextView
        android:id="@+id/main_grocery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/app_name"
        android:textColor="@color/color_black_light"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/main_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_grocery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/slogan"
        android:textColor="@color/color_black"
        android:textSize="14sp"
        android:textStyle="normal" />

<!--
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/is_farmer_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/moving" />
-->


    <Button
        android:id="@+id/seller_login_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/is_farmer_btn"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/inputtext"
        android:padding="20dp"
        android:text="@string/farmer_login_and_register"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"/>


    <Button
        android:id="@+id/is_farmer_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="Login"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />


</RelativeLayout>