<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyers.FarmerLogin">


    <ImageView
        android:id="@+id/seller_main_app_logo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:src="@drawable/pat_name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/farmer_phone_no_input_tyl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seller_main_app_logo"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColorHint="@android:color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/farmer_phone_no_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:hint="Phone Number"
            android:maxLength="10"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/farmer_password_input_tyl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/farmer_phone_no_input_tyl"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColorHint="@android:color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/farmer_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputtext"
            android:padding="20dp"
            android:hint="Password"
            android:maxLength="10"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/farmer_remember_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember me"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:theme="@style/coloured_checkbox"
        android:layout_marginTop="10dp"
        android:layout_below="@id/farmer_password_input_tyl"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        />

    <TextView
        android:id="@+id/farmer_forgot_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_below="@id/farmer_password_input_tyl"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        />

    <Button
        android:id="@+id/farmer_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/farmer_forgot_txtview"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:text="@string/login_customer"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:padding="20dp"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/farmer_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_textview"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/farmer_login_btn"
        android:layout_marginRight="15dp"
        />

    <TextView
        android:id="@+id/farmer_not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_admin_textview"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/farmer_login_btn"
        android:layout_marginLeft="15dp"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/is_customer_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/customer_login"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textAllCaps="false"
        />

</RelativeLayout>
